k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: personallearningpro
  namespace: personallearningpro
  labels:
    app: personallearningpro
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 5001
      protocol: TCP
      name: http
  selector:
    app: personallearningpro
